[package]
name = "runaserver"
version = "1.6.7"
edition = "2024"

[dependencies]
rpassword = "7.3"
libc = "0.2"
regex = "1.12.3"
mysql = "24.0"
rust-i18n = "4.1.0"
terminal_size = "0.4.4"
ureq = "3.3.0"
local-ip-address = "0.6.13"
chrono = "0.4.45"
toml = "0.8"
rust-embed = { version = "8.5", features = ["include-exclude"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
